--- a/计算机使用技巧.md
+++ b/计算机使用技巧.md
@@ -62,6 +62,8 @@ Edge <https://www.microsoft.com/zh-cn/edge> 注意是新版 `Edge` 不是 Win10 
 
 至于其他浏览器，诸如 QQ浏览器，猎豹急速浏览器，360安全浏览器之类的软件请立即卸载。
 
+这里有如何高效使用浏览器的介绍： [常用软件介绍](常用软件介绍.md)
+
 ## 更多
 
 大概就说这么多吧，只要不安装国产的垃圾杀毒软件和浏览器，你的电脑使用起来绝对会很舒服。
