--- a/计算机使用技巧.md
+++ b/计算机使用技巧.md
@@ -14,7 +14,7 @@
 
 > 删了它们我怎么清理电脑垃圾啊？
 
-在旧电脑上用的硬盘是机械硬盘，而机械硬盘的磁盘碎片会影响电脑系统运行速度，在旧电脑上清理垃圾确实有用且会提升电脑运行速度，但是现在的电脑用的都是固态硬盘，这些磁盘垃圾并不会影响电脑性能，不会影响系统的运行速度，最多只是占一些内存，如果你非要清理的话，我推荐你使用 `CCleaner` <https://www.ccleaner.com/>。
+在旧电脑上用的硬盘是机械硬盘，而机械硬盘的磁盘碎片会影响电脑系统运行速度，在旧电脑上清理垃圾确实有用且会提升电脑运行速度，但是现在的电脑用的都是固态硬盘，这些磁盘垃圾并不会影响电脑性能，不会影响系统的运行速度，最多只是占一些存储空间，如果你非要清理的话，我推荐你使用 `CCleaner` <https://www.ccleaner.com/>。
 
 > 没有软件管家我不会下载软件了怎么办？
 
