--- a/计算机使用技巧.md
+++ b/计算机使用技巧.md
@@ -6,7 +6,7 @@
 
 ## 杀毒软件
 
-或许你会在较旧的电脑上见到诸如*360安全卫士*，*金山毒霸*，*电脑管家*等杀毒软件，受其影响，你或许也会在电脑上安装这些软件，但是，对于计算机专业来说，这些软件不仅无用而且会给你的学习带来很多麻烦。请 **务必** **立即** 删除它们。
+或许你会在较旧的电脑上见到诸如*360 安全卫士*，_金山毒霸_，*电脑管家*等杀毒软件，受其影响，你或许也会在电脑上安装这些软件，但是，对于计算机专业来说，这些软件不仅无用而且会给你的学习带来很多麻烦。请 **务必** **立即** 删除它们。
 
 > 但是，没有杀毒软件的话，电脑中毒怎么办啊？
 
@@ -26,7 +26,7 @@
 启动任务管理器，点击 `启动` 找到想要禁用的自启项，右击，选择禁用。
 
 设置开机自启动：\
-按住 Win键（左下角有windows徽标的按键）然后按 `R`, 在弹出的运行框中输入 `shell:startup` 将软件的 **快捷方式** 放在这个目录下即可。
+按住 Win 键（左下角有 windows 徽标的按键）然后按 `R`, 在弹出的运行框中输入 `shell:startup` 将软件的 **快捷方式** 放在这个目录下即可。
 
 > 我想要那个网速显示的悬浮窗！！
 
@@ -58,9 +58,9 @@ Firefox <https://www.mozilla.org/zh-CN/firefox/>
 
 Edge <https://www.microsoft.com/zh-cn/edge> 注意是新版 `Edge` 不是 Win10 自带的那个。
 
-此外还有 Firefox Dev 版本 <https://www.mozilla.org/zh-CN/firefox/developer/> 可以用来调试web程序。
+此外还有 Firefox Dev 版本 <https://www.mozilla.org/zh-CN/firefox/developer/> 可以用来调试 web 程序。
 
-至于其他浏览器，诸如 QQ浏览器，猎豹急速浏览器，360安全浏览器之类的软件请立即卸载。
+至于其他浏览器，诸如 QQ 浏览器，猎豹急速浏览器，360 安全浏览器之类的软件请立即卸载。
 
 这里有如何高效使用浏览器的介绍： [常用软件介绍](常用软件介绍.md)
 
@@ -74,4 +74,4 @@ Edge <https://www.microsoft.com/zh-cn/edge> 注意是新版 `Edge` 不是 Win10 
 
 本仓库保持更新，想到其他内容之后会添加。
 
-如果你有好的内容欢迎pr。
+如果你有好的内容欢迎 pr。
